# SearchCommander

./: .gitignore  Cargo.toml
src/: counts.rs  files.rs  files_cache.rs  main.rs  search.rs
