[package]
name = "KursovaRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
lopdf = "0.32.0"
rayon = "1.9.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
open = "5.1.2"