[package]
name = "kursova_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
lopdf = "0.32.0"
rayon = "1.9.0"
open = "5.1.2"
dashmap = "5.5.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
rmp-serde = "1.1.2"